test/parser/assignment/invalid_pattern_assignment_op_error2.myte
module test

fun test() {
  _ += 1;
}